--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,12 @@
-body {
-  h1 {
-    color: black;
-  }
+html, body, div#root, div#root > div {
+  height: 100%
+}
+
+img.spinner {
+  margin: auto;
+  display: block;    
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  position: absolute;
 }
